fix overflown menu shadow

--- a/src/style.css
+++ b/src/style.css
@@ -72,7 +72,8 @@ a:hover {
     top: 0;
     right: 5em;
     height: 2.9em;
-    width: 1.1em;
+    width: 3em;
+    pointer-events: none;
     background: -moz-linear-gradient(left,  rgba(0,159,253,0) 0%, rgba(0,159,253,1) 100%);
     background: -webkit-linear-gradient(left,  rgba(0,159,253,0) 0%,rgba(0,159,253,1) 100%);
     background: linear-gradient(to right,  rgba(0,159,253,0) 0%,rgba(0,159,253,1) 100%);
@@ -84,6 +85,10 @@ a:hover {
     margin-right: 1.16em;
     font-size: 140%;
     cursor: pointer;
+}
+
+#menu .btn.last {
+    margin-right: 2em;
 }
 
 #menu .btn.hide {
